Fix misaligned nav buttons

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -195,6 +195,10 @@ nav li {
 	fill: var(--nav-hover);
 }
 
+nav li .btn-menu {
+	height: 100%;
+}
+
 nav li.dimmed svg {
 	fill: var(--nav-faded);
 }
